--- a/CursoWindowsForms/Frm_Principal_Menu_UC.resx
+++ b/CursoWindowsForms/Frm_Principal_Menu_UC.resx
@@ -127,9 +127,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        DQAAAk1TRnQBSQFMAgEBBwEAAUABAAFAAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
+        DgAAAk1TRnQBSQFMAgEBCAEAAUgBAAFIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -156,36 +156,41 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/w8AAfMBEwoAATEEWAEx
-        AQAB8wGSCnMBkgHzFQAB/wNLAewBSgFtAbsB8gH/ARMB8wUAAf8EuwExAVgBWQFSAVgBMQHzAXMMUwFz
-        AfMVAAH/AfABBwHvArsB8QK7Af8IAAH/AZEBAAExAVgBUgFKAVgBMQH3AlMMWQH3FAAB/wMHAe8BuwK8
-        AfIBuwHyBwACCQK7ATEEWAExAXMBUw1ZAXMTAAG8BAcB9wG7A7wB8AG7BgABvAHvARICFAG7AfcB/wEA
-        AQcBAAFzAVMNWQFzFAAEBwHvAbsDvAG7AfQGAAEJAhICFAETAfcB/wEAAQcBAAFzAVMNWQFzFQAB8wIH
-        Ae0B9wS7BwABCQISAxQC9wHvAQcBAAFzAVMNWQFzFAAB/wIHA+0BAAH/CQAB/wLqAxMB/wHxAbwCAAFz
-        AVMMWQF6AXMUAAH/AwcB9wHtDAAC6gMSBQABcwFTDFkBegEcEwAB9AHvAwcC9wH/CgAB8ALqAhIB6gH0
-        BAABcwFTC1kBmgF6AQcUAAHvAwcD9wkAAbsBjQGTAuoBEgGTAa4BvAMAAXMBUwhZAnoBmgF5AewB/xQA
-        Ae8DBwP3CAAB9AHqARMBEgKTAY0CEwG7AwABBwFTBlkBdAHvA7wB8gEHFQAB8QMHA/cIAAG7ARMBvATx
-        AfQBvAHqAf8CAAH/AZIBeQRZAXMBkQMHAf8BAAG8FgADBwP3CQAB8Ae7AfIEAAH/AZEB7wIHAbwB9AYA
-        AbwWAAH/AgcB9wEHFwAB/wH3AfQKAAG8MgAB/wGRAe8LBxsAAf8DMgH/CwABGwFMAW8CTAH/CgAB/wMy
-        Af8VAAVLBTICUwMAAfIC8QTzAUwE8QFMAgABMQYAAVMEMgJTFAABkwRLATIBSwMyAfQBUwMABPEC8wF0
-        AZkE8QFMAgABGwExAQABGgFYAgABMgH0AzIB9AFTBQAB9AS8AfAKAARLAkoDMgUAA/ECvAHwAXQBvAHx
-        AewB7wHxAW8DAAEbBDEDAAMyBQAB8wG8AQcFvAEAAv8IAAFZATIBAAFSAfYDMgUAA/EBeAFXAfMB8QFM
-        AfEBvALxAUwDAAGaAXoEOAIAAzIEAAHwAbwBbwJMArwB/wEABPEHAAFZATIBAAFSAfYBGgIyBQAE8QFX
-        AXgB8wFvAUwBvAGZAUwBGwMAA3oCOAExATgBAAEaAjIDAAH/A7wBbwGTAbwCAAH/BPEHAAFZAVIBAAFS
-        AfYCAAFZBAAHVwLwAbwCdAUAAZoDegQxAgABWQMAArwBUwGZA7wB9AEABfEB8gYAAVgBUgEAAVIB9gcA
-        B1cBeATzBgABmgN6BDgFAAG8A1MFvAbxBQAGOAFZBgABVwJWBFcB8QTzBwABmgN6BDgEAAK8AQcDvAJX
-        AvEDtAHxAfMGAAL2AQABmgkAA/EBvAFXAZgCBwHwAvMIAAGaA3oEMQMAAfQCvAFZATgBWQG8AVYC8QH3
-        AlABcwgAAzgJAAPxAXgBVwPwAfEC8wkAAZoDegQxAwAC8QM4AfEBVgFXAVYBVwHyAfQCUAYAAfYDOAkA
-        CfEC8woAAZoDegI4BQAB8gTxAXgBVgFXAXgBGwH0AXIBUAUAAXoCWQE4AlkB9AcACvEB8wsAAZoCegI4
-        BwAB8gTxAVYE8wFyCAABOAoACvEB8wwAApoBAAH0AfYLAAFXAVYB8gH0AlAIAAGaCwAK/w0AAf8OAAH/
-        AVcB8AHyAVABHDwAAZgBeAH/AQABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wEA
-        Af8B/AH/AcABgAEBAgAB8AEAAfgFAAH4AQEB/gFABAAB8AEBAfwFAAHgAQEB+AEFBAAB8AEBAfgBBQQA
-        AfgBAwH4AQEEAAHwAS8B+AEDBAAB8AE/AfwBHwQAAeABHwH4AQ8EAAHwAR8B8AEHBAAB8AEfAeABBwEA
-        AQECAAHwAR8B4AEDAQABBQIAAfgBHwHwAQcBgAH9AgAB+AE/Av8BjwH9AgAE/wGAAQECAAH/AcEB/wHA
-        Af8BwQL/AfABAAHgAQAB3wGAAv8B8AEAAeABAAHJAYAB+AEfAfgBAwHgAQAB4AHjAeABEwH8AYMB4AEA
-        AeABYwHAASEB/AGDAeABAAHgASMBgAHBAfwBmwHAAQMB4AEbAYABQAH8AZ8BwAEDAfABDwGAAQAB+AEP
-        AcABAwH4AQcBgAEAAfwBvwHgAQMB/AEDAYABAQH+AT8B4AEDAf4BAQHAAQAB/AE/AeABAwH/AQMB4AEA
-        AfgBDwHgAQMB/wGDAfgBAAH/AX8B4AEDAf8ByQH/AcAB/wF/AfABAwH/Ae8B/wHAB/8B8Qs=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AEwAB8wET
+        CgABMQRYATEBAAHzAZIKcwGSAfMBAAEUAmYBEAlmARUBZgFDBAAB/wNLAewBSgFtAbsB8gH/ARMB8wUA
+        Af8EuwExAVgBWQFSAVgBMQHzAXMMUwFzAfMBBwJsAREFbAFmAUMCZgJsARUFAAH/AfABBwHvArsB8QK7
+        Af8IAAH/AZEBAAExAVgBUgFKAVgBMQH3AlMMWQH3Af8BZgVsAUMB6wFmBWwBEQQAAf8DBwHvAbsCvAHy
+        AbsB8gcAAgkCuwExBFgBMQFzAVMNWQFzAQABEwFmA2wBQwL1AesBZgNsAUMB/wMAAbwEBwH3AbsDvAHw
+        AbsGAAG8Ae8BEgIUAbsB9wH/AQABBwEAAXMBUw1ZAXMCAAH0ArwB7wT1ARACvAHxBgAEBwHvAbsDvAG7
+        AfQGAAEJAhICFAETAfcB/wEAAQcBAAFzAVMNWQFzBAAB/wH4BPABvAEVCQAB8wIHAe0B9wS7BwABCQIS
+        AxQC9wHvAQcBAAFzAVMNWQFzBAABvAb1AeoIAAH/AgcD7QEAAf8JAAH/AuoDEwH/AfEBvAIAAXMBUwxZ
+        AXoBcwQAAeoG9QHqAfQHAAH/AwcB9wHtDAAC6gMSBQABcwFTDFkBegEcAwABBwHtBvUB6gHrBgAB9AHv
+        AwcC9wH/CgAB8ALqAhIB6gH0BAABcwFTC1kBmgF6AQcDAAH0ARIB9QEQAvUB6wHtAeoBEQcAAe8DBwP3
+        CQABuwGNAZMC6gESAZMBrgG8AwABcwFTCFkCegGaAXkB7AH/AwAB/wEVBvUB6gEVBwAB7wMHA/cIAAH0
+        AeoBEwESApMBjQITAbsDAAEHAVMGWQF0Ae8DvAHyAQcEAAH0AUoGBwETAUsHAAHxAwcD9wgAAbsBEwG8
+        BPEB9AG8AeoB/wIAAf8BkgF5BFkBcwGRAwcB/wEAAbwEAAFDAXkGegJKCAADBwP3CQAB8Ae7AfIEAAH/
+        AZEB7wIHAbwB9AYAAbwEAAFzB3oBEgH/CAAB/wIHAfcBBxcAAf8B9wH0CgABvAQAAXQHegEUJQAB/wGR
+        Ae8LBwQAB/gBBw8AAf8DMgH/CwABGwFMAW8CTAH/CgAB/wMyAf8VAAVLBTICUwMAAfIC8QTzAUwE8QFM
+        AgABMQYAAVMEMgJTFAABkwRLATIBSwMyAfQBUwMABPEC8wF0AZkE8QFMAgABGwExAQABGgFYAgABMgH0
+        AzIB9AFTBQAB9AS8AfAKAARLAkoDMgUAA/ECvAHwAXQBvAHxAewB7wHxAW8DAAEbBDEDAAMyBQAB8wG8
+        AQcFvAEAAv8IAAFZATIBAAFSAfYDMgUAA/EBeAFXAfMB8QFMAfEBvALxAUwDAAGaAXoEOAIAAzIEAAHw
+        AbwBbwJMArwB/wEABPEHAAFZATIBAAFSAfYBGgIyBQAE8QFXAXgB8wFvAUwBvAGZAUwBGwMAA3oCOAEx
+        ATgBAAEaAjIDAAH/A7wBbwGTAbwCAAH/BPEHAAFZAVIBAAFSAfYCAAFZBAAHVwLwAbwCdAUAAZoDegQx
+        AgABWQMAArwBUwGZA7wB9AEABfEB8gYAAVgBUgEAAVIB9gcAB1cBeATzBgABmgN6BDgFAAG8A1MFvAbx
+        BQAGOAFZBgABVwJWBFcB8QTzBwABmgN6BDgEAAK8AQcDvAJXAvEDtAHxAfMGAAL2AQABmgkAA/EBvAFX
+        AZgCBwHwAvMIAAGaA3oEMQMAAfQCvAFZATgBWQG8AVYC8QH3AlABcwgAAzgJAAPxAXgBVwPwAfEC8wkA
+        AZoDegQxAwAC8QM4AfEBVgFXAVYBVwHyAfQCUAYAAfYDOAkACfEC8woAAZoDegI4BQAB8gTxAXgBVgFX
+        AXgBGwH0AXIBUAUAAXoCWQE4AlkB9AcACvEB8wsAAZoCegI4BwAB8gTxAVYE8wFyCAABOAoACvEB8wwA
+        ApoBAAH0AfYLAAFXAVYB8gH0AlAIAAGaCwAK/w0AAf8OAAH/AVcB8AHyAVABHDwAAZgBeAH/AQABQgFN
+        AT4HAAE+AwABKAMAAUADAAEwAwABAQEAAQEFAAGAAQEWAAP/gQAB/wH8Af8BwAGAAQECAAHwAQAB+AUA
+        AfgBAQH+AUAEAAHwAQEB/AMAAYABAAHgAQEB+AEFAgABwAEDAfABAQH4AQUCAAHwAQ8B+AEDAfgBAQIA
+        AfABDwHwAS8B+AEDAgAB8AEHAfABPwH8AR8CAAHgAQcB4AEfAfgBDwIAAeABBwHwAR8B8AEHAgAB4AEH
+        AfABHwHgAQcBAAEBAeABBwHwAR8B4AEDAQABBQHgAQcB+AEfAfABBwGAAf0B4AEHAfgBPwL/AY8B/QHg
+        AQ8E/wGAAQEB4AEfAf8BwQH/AcAB/wHBAv8B8AEAAeABAAHfAYAC/wHwAQAB4AEAAckBgAH4AR8B+AED
+        AeABAAHgAeMB4AETAfwBgwHgAQAB4AFjAcABIQH8AYMB4AEAAeABIwGAAcEB/AGbAcABAwHgARsBgAFA
+        AfwBnwHAAQMB8AEPAYABAAH4AQ8BwAEDAfgBBwGAAQAB/AG/AeABAwH8AQMBgAEBAf4BPwHgAQMB/gEB
+        AcABAAH8AT8B4AEDAf8BAwHgAQAB+AEPAeABAwH/AYMB+AEAAf8BfwHgAQMB/wHJAf8BwAH/AX8B8AED
+        Af8B7wH/AcAH/wHxCw==
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
